# wlearn

./: .gitignore  CNAME  README.md  _config.yml  package-lock.json  package.json
.githooks/: pre-commit
fixtures/: ebm-classifier.json  ebm-classifier.wlrn  ebm-regressor.json  ebm-regressor.wlrn  generate.mjs  liblinear-classifier.json  libsvm-classifier.json  libsvm-classifier.wlrn  lightgbm-binary.json  lightgbm-binary.wlrn  lightgbm-multiclass.json  lightgbm-multiclass.wlrn  lightgbm-regressor.json  lightgbm-regressor.wlrn  nanoflann-classifier.json  nanoflann-classifier.wlrn  nanoflann-regressor.json  nanoflann-regressor.wlrn  pipeline-single.json  pipeline-single.wlrn  verify-py-bundles.mjs  verify.mjs  xgboost-binary.json  xgboost-binary.wlrn  xgboost-multiclass.json  xgboost-regressor.json
fixtures/nn/: mlp_classifier.json  mlp_classifier.wlrn  mlp_regressor.json  (+1 more)
py/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
py/bench/: bench_automl.py
py/tests/: test_automl.py  test_bundle.py  test_compat.py  test_ebm_fit.py  test_ensemble.py  test_fit.py  test_nn.py  test_nn_compat.py  test_pipeline_fit.py  test_registry.py  test_scalers.py  test_stochtree_fit.py  test_tsetlin_fit.py
py/wlearn/: __init__.py  bundle.py  ebm.py  errors.py  liblinear.py  libsvm.py  lightgbm.py  nanoflann.py  nn.py  pipeline.py  preprocess.py  registry.py  rf.py  scalers.py  stochtree.py  tsetlin.py  xgboost.py  xlearn.py
py/wlearn/automl/: __init__.py  _auto_fit.py  _common.py  _cv.py  _executor.py  _leaderboard.py  _portfolio.py  _progressive.py  _rng.py  _sampler.py  _search.py  _strategy_halving.py  _strategy_progressive.py  _strategy_random.py
py/wlearn/ensemble/: __init__.py  _bagging.py  _oof.py  _selection.py  _stacking.py  _voting.py  _weights.py
(+6 files in other folders)
