[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wlearn"
version = "0.1.0"
description = "Portable ML computation primitives"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
  { name = "Anton Zemlyansky" },
]
keywords = ["machine-learning", "ml", "wasm", "xgboost", "random-forest", "portable"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
xgboost = ["xgboost>=2.0", "numpy>=1.22"]
sklearn = ["scikit-learn>=1.3", "numpy>=1.22"]
liblinear = ["liblinear-official>=2.50", "numpy>=1.22"]
libsvm = ["libsvm-official>=3.30", "numpy>=1.22"]
nanoflann = ["pynanoflann>=0.10", "numpy>=1.22"]
ebm = ["numpy>=1.22"]
ebm-fit = ["interpret>=0.6", "numpy>=1.22"]
xlearn = ["numpy>=1.22"]
tsetlin = ["numpy>=1.22"]
tsetlin-fit = ["tmu>=0.7", "numpy>=1.22"]
lightgbm = ["lightgbm>=4.0", "numpy>=1.22"]
stochtree = ["stochtree>=0.1", "numpy>=1.22"]
nn = ["numpy>=1.22"]
all = [
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "liblinear-official>=2.50",
    "libsvm-official>=3.30",
    "pynanoflann>=0.10",
    "interpret>=0.6",
    "tmu>=0.7",
    "lightgbm>=4.0",
    "stochtree>=0.1",
    "numpy>=1.22",
]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["wlearn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/wlearn-org/wlearn"
Repository = "https://github.com/wlearn-org/wlearn"
